[FIX] fix CSS Z-index bug

--- a/client/src/scss/page/_band-grid.scss
+++ b/client/src/scss/page/_band-grid.scss
@@ -74,7 +74,7 @@
         color: $bg-sec;
         font-size: 32px;
 
-        z-index: 10;
+        z-index: 5;
     }
 }
 
